contrato, pago, cliente con swagger
