# src/routes/contratoRoutes.js
@@ -1,0 +1,7 @@
+const express = require('express');
+const router = express.Router();
+const contratoController = require('../controllers/contratoVentaController');
+
+router.post('/', contratoController.createContrato);
+
+module.exports = router;
